--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -119,7 +119,7 @@
             <div class="modal-body">
                 <div class="container-fluid" id="sanctionLetterDistplay">
                     <iframe id="sanctionFrame" style="width: 100%; height: 800px;"></iframe>
-                    <button class="btn btn-dark d-flex mx-auto" id="approve">Approve</button>
+                    <button class="btn btn-dark d-flex mx-auto" id="approveSingle">Approve</button>
                 </div>
             </div>
 
