--- a/Views/Officer/SendBankFile.cshtml
+++ b/Views/Officer/SendBankFile.cshtml
@@ -1,35 +1,52 @@
 <div class="full-screen-section flex-column py-5 mb-5">
     <p class="text-center fw-bold fs-4 mt-5">Bank File Transfer</p>
-    <div class="container-fluid">
+    <div class="container-fluid" id="mainContainer">
         <div class="container d-flex justify-content-center gap-2">
             <select class="form-select w-50" name="services" id="services">
                 <option value="">Select Service</option>
             </select>
+            <select class="form-select w-50" name="districts" id="districts">
+                <option value="">Select District</option>
+            </select>
 
-            <button class="btn btn-primary" id="getRecords">Get Records</button>
+            <button class="btn btn-dark" id="getRecords">Generate</button>
         </div>
 
-        <div class="container mt-2" id="ftpContainer">
-            <form id="ftpForm" style="display: none;">
-                <div class="container-fluid mt-5 border rounded-border p-3" id="ftpForm">
-                    <p class="w-100 mt-5 fs-3 text-center">Provide SFTP Details.</p>
+        <div id="progress-container" class="container mt-5" style="display: none;">
+            <progress id="progressBar" value="0" max="100" class="w-75 d-flex mx-auto"
+                style="height: 20px;appearance:none;border-radius: 15px;background-color: #a29e9e;"></progress>
+        </div>
+
+    </div>
+</div>
+
+<div class="modal" id="ftpCredentials" tabindex="-1">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+        <div class="modal-content w-50 mx-auto">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                FTP Credentials
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+                <div class="container-fluid" id="ftpForm">
                     <div class="container d-flex flex-column gap-4 mb-2">
-                        <input class="form-control" type="text" name="ftpHost" id="ftpHost" placeholder="FTP Host"
-                            required>
-                        <input class="form-control" type="text" name="ftpUser" id="ftpUser" placeholder="FTP User"
-                            required>
+                        <input class="form-control" type="text" name="ftpHost" id="ftpHost" placeholder="FTP Host">
+                        <input class="form-control" type="text" name="ftpUser" id="ftpUser" placeholder="FTP User">
                         <input class="form-control" type="password" name="ftpPassword" id="ftpPassword"
-                            placeholder="FTP Password" required>
+                            placeholder="FTP Password">
                     </div>
 
-                    <button type="submit" class="btn btn-dark d-flex mx-auto" id="send">Send</button>
+                    <button class="btn btn-dark d-flex mx-auto" id="send">Send</button>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
 
 <script>
-    const serviceList = @Html.Raw(Json.Serialize(Model));
+    const data = @Html.Raw(Json.Serialize(Model));
+    console.log(data);
 </script>
 <script src="/js/Officer/sendBankFile.js"></script>
