--- a/Views/User/ApplicationStatus.cshtml
+++ b/Views/User/ApplicationStatus.cshtml
@@ -17,11 +17,11 @@
     </div>
 </div>
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="statusTimeline" tabindex="-1" aria-labelledby="statusTimelineLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content w-100">
             <div class="modal-header bg-dark text-white">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Application Timeline</h1>
+                <h1 class="modal-title fs-5" id="statusTimelineLabel">Application Timeline</h1>
                 <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
