--- a/Views/Shared/Navbar.cshtml
+++ b/Views/Shared/Navbar.cshtml
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-expand-lg flex-column fixed-top py-4 px-0 gap-4 ">
-    <div class="container-fluid border-bottom border-3 border-danger"></div>
+<nav class="navbar navbar-expand-lg flex-column fixed-top p-0">
+    <div class="container-fluid border-bottom border-3 border-danger p-0">
+        <partial name="Header" />
+    </div>
     <div class="container-fluid d-flex justify-content-center">
         <i class=" navbar-toggler fa-solid fa-bars" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNavDropdown"></i>
